--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ sass:
 resume_avatar:                  "true"
 resume_name:                    "Itay Weiss"
 resume_title:                   "Code Jedi"
-resume_contact_email: "itaywss@gmail.com"
+resume_contact_email: "itaywss+resume@gmail.com"
 resume_header_contact_info: "Tel-Aviv, Israel | itaywss@gmail.com"
 resume_header_intro: "<p>Software developer with lots of experience in Python, .Net, C++, Operating systems and Software security. Recent experience in Golang. Fulfilled positions as hands-on Senior developer, Technological supervisor and Development team leader. Initiated and implemented innovative projects and adaptation of new technologies.</p>"
 
